--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         ":v": "yarn lint && yarn format && yarn typecheck && yarn test",
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "serve": "serve -s build",
         "lint": "eslint . && prettier . --check",
         "format": "eslint . --fix && prettier . --write",
         "typecheck": "tsc",
@@ -16,25 +17,26 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
-        "typescript": "^4.4.2",
-        "web-vitals": "^2.1.0"
+        "typescript": "^5.3.3",
+        "web-vitals": "^3.5.2"
     },
     "devDependencies": {
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^18.19.18",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "@typescript-eslint/eslint-plugin": "^6.19.0",
-        "@typescript-eslint/parser": "^6.19.0",
-        "eslint": "^8.56.0",
+        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/react": "^14.2.1",
+        "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.20",
+        "@types/react": "^18.2.59",
+        "@types/react-dom": "^18.2.19",
+        "@typescript-eslint/eslint-plugin": "^7.1.0",
+        "@typescript-eslint/parser": "^7.1.0",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.33.2",
-        "prettier": "^3.2.2"
+        "prettier": "^3.2.5",
+        "serve": "^14.2.1"
     },
     "eslintConfig": {
         "extends": [
