--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
     "private": true,
     "scripts": {
         ":v": "yarn lint && yarn format && yarn typecheck && yarn test",
+        "dev": "concurrently \"yarn start:panda\" \"yarn start\"",
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start:panda": "panda --watch",
+        "prepare": "panda codegen",
+        "build": "yarn build:panda && react-scripts build",
+        "build:panda": "panda",
         "serve": "serve -s build",
         "lint": "eslint . && prettier . --check",
         "format": "eslint . --fix && prettier . --write",
@@ -21,6 +25,7 @@
         "web-vitals": "^3.5.2"
     },
     "devDependencies": {
+        "@pandacss/dev": "^0.32.1",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^14.5.2",
@@ -30,6 +35,7 @@
         "@types/react-dom": "^18.2.19",
         "@typescript-eslint/eslint-plugin": "^7.1.0",
         "@typescript-eslint/parser": "^7.1.0",
+        "concurrently": "^8.2.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
